--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
+    "composite": true,
     "module": "commonjs",
     "declaration": true,
     "emitDeclarationOnly": true,
     "removeComments": false,
     "noLib": false,
-    "target": "es6",
+    "target": "es2018",
     "sourceMap": false,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
 }
