feat(): add middleware type definitions

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -2,10 +2,13 @@
   "files": [],
   "references": [
     {
-      "path": "./container/tsconfig.build.json",
+      "path": "./container/tsconfig.build.json"
     },
     {
-      "path": "./core/tsconfig.build.json",
+      "path": "./core/tsconfig.build.json"
     },
+    {
+      "path": "./middleware/tsconfig.build.json"
+    }
   ]
 }
