--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hemtypes/middleware",
   "version": "0.5.0",
-  "description": "Standard TypeScript type definitions for HTTP server-side middleware",
+  "description": "Common type definitions for HTTP server-side middleware",
   "author": "Augustus Kamau",
   "license": "MIT",
   "types": "./dist/index.d.ts",
