--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hemtypes/handler",
+  "name": "@hemtypes/request-handler",
   "version": "0.5.0",
   "description": "Common type definitions for HTTP server-side request handler",
   "author": "Augustus Kamau",
