--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -8,10 +8,9 @@
       "path": "./core/tsconfig.build.json"
     },
     {
-      "path": "./handler/tsconfig.build.json"
-    },
-    {
       "path": "./middleware/tsconfig.build.json"
-    }
+    }, {
+      "path": "./request-handler/tsconfig.build.json"
+    },
   ]
 }
