feat(): add http adapter type definitions

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -11,6 +11,9 @@
       "path": "./handler/tsconfig.build.json"
     },
     {
+      "path": "./http-adapter/tsconfig.build.json"
+    },
+    {
       "path": "./middleware/tsconfig.build.json"
     }
   ]
